v16.2/modules/GC.Spread.Sheets.md
# Namespace: Sheets

[GC](GC.md).[Spread](GC.Spread.md).Sheets

## Table of contents

### Namespaces

- [AutoMerge](GC.Spread.Sheets.AutoMerge.md)
- [Barcode](GC.Spread.Sheets.Barcode.md)
- [Bindings](GC.Spread.Sheets.Bindings.md)
- [CalcEngine](GC.Spread.Sheets.CalcEngine.md)
- [CellState](GC.Spread.Sheets.CellState.md)
- [CellTypes](GC.Spread.Sheets.CellTypes.md)
- [Charts](GC.Spread.Sheets.Charts.md)
- [Commands](GC.Spread.Sheets.Commands.md)
- [Comments](GC.Spread.Sheets.Comments.md)
- [ConditionalFormatting](GC.Spread.Sheets.ConditionalFormatting.md)
- [ContextMenu](GC.Spread.Sheets.ContextMenu.md)
- [DataValidation](GC.Spread.Sheets.DataValidation.md)
- [Fill](GC.Spread.Sheets.Fill.md)
- [Filter](GC.Spread.Sheets.Filter.md)
- [FloatingObjects](GC.Spread.Sheets.FloatingObjects.md)
- [FormulaPanel](GC.Spread.Sheets.FormulaPanel.md)
- [FormulaTextBox](GC.Spread.Sheets.FormulaTextBox.md)
- [GanttSheet](GC.Spread.Sheets.GanttSheet.md)
- [Hyperlink](GC.Spread.Sheets.Hyperlink.md)
- [IO](GC.Spread.Sheets.IO.md)
- [InputMask](GC.Spread.Sheets.InputMask.md)
- [NameBox](GC.Spread.Sheets.NameBox.md)
- [OutlineColumn](GC.Spread.Sheets.OutlineColumn.md)
- [Outlines](GC.Spread.Sheets.Outlines.md)
- [PDF](GC.Spread.Sheets.PDF.md)
- [Print](GC.Spread.Sheets.Print.md)
- [Search](GC.Spread.Sheets.Search.md)
- [Shapes](GC.Spread.Sheets.Shapes.md)
- [Slicers](GC.Spread.Sheets.Slicers.md)
- [Sparklines](GC.Spread.Sheets.Sparklines.md)
- [StatusBar](GC.Spread.Sheets.StatusBar.md)
- [TableSheet](GC.Spread.Sheets.TableSheet.md)
- [Tables](GC.Spread.Sheets.Tables.md)
- [Touch](GC.Spread.Sheets.Touch.md)

### Enumerations

- [AllSheetsListVisibility](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)
- [AutoFitType](../enums/GC.Spread.Sheets.AutoFitType.md)
- [ButtonImageType](../enums/GC.Spread.Sheets.ButtonImageType.md)
- [ButtonPosition](../enums/GC.Spread.Sheets.ButtonPosition.md)
- [ButtonVisibility](../enums/GC.Spread.Sheets.ButtonVisibility.md)
- [CalculationMode](../enums/GC.Spread.Sheets.CalculationMode.md)
- [CalculationType](../enums/GC.Spread.Sheets.CalculationType.md)
- [CalendarPage](../enums/GC.Spread.Sheets.CalendarPage.md)
- [CalendarStartDay](../enums/GC.Spread.Sheets.CalendarStartDay.md)
- [CaptionAlignment](../enums/GC.Spread.Sheets.CaptionAlignment.md)
- [CellStatesType](../enums/GC.Spread.Sheets.CellStatesType.md)
- [ClearPendingChangeType](../enums/GC.Spread.Sheets.ClearPendingChangeType.md)
- [ClipboardActionType](../enums/GC.Spread.Sheets.ClipboardActionType.md)
- [ClipboardPasteOptions](../enums/GC.Spread.Sheets.ClipboardPasteOptions.md)
- [CopyPasteHeaderOptions](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)
- [CopyToOptions](../enums/GC.Spread.Sheets.CopyToOptions.md)
- [CornerPosition](../enums/GC.Spread.Sheets.CornerPosition.md)
- [DropDownType](../enums/GC.Spread.Sheets.DropDownType.md)
- [DropdownListValue](../enums/GC.Spread.Sheets.DropdownListValue.md)
- [EditorStatus](../enums/GC.Spread.Sheets.EditorStatus.md)
- [FileType](../enums/GC.Spread.Sheets.FileType.md)
- [GroupSort](../enums/GC.Spread.Sheets.GroupSort.md)
- [HeaderAutoText](../enums/GC.Spread.Sheets.HeaderAutoText.md)
- [HeaderOptions](../enums/GC.Spread.Sheets.HeaderOptions.md)
- [HorizontalAlign](../enums/GC.Spread.Sheets.HorizontalAlign.md)
- [HorizontalPosition](../enums/GC.Spread.Sheets.HorizontalPosition.md)
- [HyperlinkTargetType](../enums/GC.Spread.Sheets.HyperlinkTargetType.md)
- [IconPosition](../enums/GC.Spread.Sheets.IconPosition.md)
- [ImageLayout](../enums/GC.Spread.Sheets.ImageLayout.md)
- [ImeMode](../enums/GC.Spread.Sheets.ImeMode.md)
- [InsertShiftCell](../enums/GC.Spread.Sheets.InsertShiftCell.md)
- [InvalidOperationType](../enums/GC.Spread.Sheets.InvalidOperationType.md)
- [LabelAlignment](../enums/GC.Spread.Sheets.LabelAlignment.md)
- [LabelVisibility](../enums/GC.Spread.Sheets.LabelVisibility.md)
- [LayoutDirection](../enums/GC.Spread.Sheets.LayoutDirection.md)
- [LayoutDisplayAs](../enums/GC.Spread.Sheets.LayoutDisplayAs.md)
- [LineStyle](../enums/GC.Spread.Sheets.LineStyle.md)
- [NumbersFitMode](../enums/GC.Spread.Sheets.NumbersFitMode.md)
- [OpenMode](../enums/GC.Spread.Sheets.OpenMode.md)
- [PatternType](../enums/GC.Spread.Sheets.PatternType.md)
- [RangeChangedAction](../enums/GC.Spread.Sheets.RangeChangedAction.md)
- [ReferenceStyle](../enums/GC.Spread.Sheets.ReferenceStyle.md)
- [ResizeMode](../enums/GC.Spread.Sheets.ResizeMode.md)
- [ResizeZeroIndicator](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)
- [RowColumnStates](../enums/GC.Spread.Sheets.RowColumnStates.md)
- [ScrollbarAppearance](../enums/GC.Spread.Sheets.ScrollbarAppearance.md)
- [SelectionPolicy](../enums/GC.Spread.Sheets.SelectionPolicy.md)
- [SelectionUnit](../enums/GC.Spread.Sheets.SelectionUnit.md)
- [SheetArea](../enums/GC.Spread.Sheets.SheetArea.md)
- [SheetTabVisible](../enums/GC.Spread.Sheets.SheetTabVisible.md)
- [SheetType](../enums/GC.Spread.Sheets.SheetType.md)
- [ShowResizeTip](../enums/GC.Spread.Sheets.ShowResizeTip.md)
- [ShowScrollTip](../enums/GC.Spread.Sheets.ShowScrollTip.md)
- [SortState](../enums/GC.Spread.Sheets.SortState.md)
- [StorageType](../enums/GC.Spread.Sheets.StorageType.md)
- [TabStripPosition](../enums/GC.Spread.Sheets.TabStripPosition.md)
- [TextDecorationType](../enums/GC.Spread.Sheets.TextDecorationType.md)
- [UsedRangeType](../enums/GC.Spread.Sheets.UsedRangeType.md)
- [ValueType](../enums/GC.Spread.Sheets.ValueType.md)
- [VertAlign](../enums/GC.Spread.Sheets.VertAlign.md)
- [VerticalAlign](../enums/GC.Spread.Sheets.VerticalAlign.md)
- [VerticalPosition](../enums/GC.Spread.Sheets.VerticalPosition.md)
- [VisualState](../enums/GC.Spread.Sheets.VisualState.md)

### Classes

- [CellRange](../classes/GC.Spread.Sheets.CellRange.md)
- [ColorScheme](../classes/GC.Spread.Sheets.ColorScheme.md)
- [Events](../classes/GC.Spread.Sheets.Events.md)
- [LineBorder](../classes/GC.Spread.Sheets.LineBorder.md)
- [NameInfo](../classes/GC.Spread.Sheets.NameInfo.md)
- [PivotTableManager](../classes/GC.Spread.Sheets.PivotTableManager.md)
- [Point](../classes/GC.Spread.Sheets.Point.md)
- [Range](../classes/GC.Spread.Sheets.Range.md)
- [Rect](../classes/GC.Spread.Sheets.Rect.md)
- [Style](../classes/GC.Spread.Sheets.Style.md)
- [Theme](../classes/GC.Spread.Sheets.Theme.md)
- [ThemeColors](../classes/GC.Spread.Sheets.ThemeColors.md)
- [Themes](../classes/GC.Spread.Sheets.Themes.md)
- [Workbook](../classes/GC.Spread.Sheets.Workbook.md)
- [Worksheet](../classes/GC.Spread.Sheets.Worksheet.md)

### Interfaces

- [FloatingObjectLoadedEventArgs](../interfaces/GC.Spread.Sheets.FloatingObjectLoadedEventArgs.md)
- [FormattedData](../interfaces/GC.Spread.Sheets.FormattedData.md)
- [IActiveSheetChangedEventArgs](../interfaces/GC.Spread.Sheets.IActiveSheetChangedEventArgs.md)
- [IActiveSheetChangingEventArgs](../interfaces/GC.Spread.Sheets.IActiveSheetChangingEventArgs.md)
- [IBaseSpreadOption](../interfaces/GC.Spread.Sheets.IBaseSpreadOption.md)
- [IBounds](../interfaces/GC.Spread.Sheets.IBounds.md)
- [IButtonClickedEventArgs](../interfaces/GC.Spread.Sheets.IButtonClickedEventArgs.md)
- [ICalendarOption](../interfaces/GC.Spread.Sheets.ICalendarOption.md)
- [ICellButton](../interfaces/GC.Spread.Sheets.ICellButton.md)
- [ICellChangedEventArgs](../interfaces/GC.Spread.Sheets.ICellChangedEventArgs.md)
- [ICellClickEventArgs](../interfaces/GC.Spread.Sheets.ICellClickEventArgs.md)
- [ICellColorSortInfo](../interfaces/GC.Spread.Sheets.ICellColorSortInfo.md)
- [ICellDoubleClickEventArgs](../interfaces/GC.Spread.Sheets.ICellDoubleClickEventArgs.md)
- [ICellPosition](../interfaces/GC.Spread.Sheets.ICellPosition.md)
- [ICellsInfo](../interfaces/GC.Spread.Sheets.ICellsInfo.md)
- [IClearChangeInfo](../interfaces/GC.Spread.Sheets.IClearChangeInfo.md)
- [IClipboardChangedEventArgs](../interfaces/GC.Spread.Sheets.IClipboardChangedEventArgs.md)
- [IClipboardChangingEventArgs](../interfaces/GC.Spread.Sheets.IClipboardChangingEventArgs.md)
- [IClipboardPastedEventArgs](../interfaces/GC.Spread.Sheets.IClipboardPastedEventArgs.md)
- [IClipboardPastingEventArgs](../interfaces/GC.Spread.Sheets.IClipboardPastingEventArgs.md)
- [IColorPickerGroup](../interfaces/GC.Spread.Sheets.IColorPickerGroup.md)
- [IColorPickerOption](../interfaces/GC.Spread.Sheets.IColorPickerOption.md)
- [IColumn](../interfaces/GC.Spread.Sheets.IColumn.md)
- [IColumnBindingInfo](../interfaces/GC.Spread.Sheets.IColumnBindingInfo.md)
- [IColumnChangedEventArgs](../interfaces/GC.Spread.Sheets.IColumnChangedEventArgs.md)
- [IColumnWidthChangedEventArgs](../interfaces/GC.Spread.Sheets.IColumnWidthChangedEventArgs.md)
- [IColumnWidthChangingEventArgs](../interfaces/GC.Spread.Sheets.IColumnWidthChangingEventArgs.md)
- [ICommentChangedEventArgs](../interfaces/GC.Spread.Sheets.ICommentChangedEventArgs.md)
- [ICommentRemovedEventArgs](../interfaces/GC.Spread.Sheets.ICommentRemovedEventArgs.md)
- [ICommentRemovingEventArgs](../interfaces/GC.Spread.Sheets.ICommentRemovingEventArgs.md)
- [ICopyData](../interfaces/GC.Spread.Sheets.ICopyData.md)
- [ICornerFold](../interfaces/GC.Spread.Sheets.ICornerFold.md)
- [ICustomSortInfo](../interfaces/GC.Spread.Sheets.ICustomSortInfo.md)
- [IDecoration](../interfaces/GC.Spread.Sheets.IDecoration.md)
- [IDirtyCellInfo](../interfaces/GC.Spread.Sheets.IDirtyCellInfo.md)
- [IDragDropBlockCompletedEventArgs](../interfaces/GC.Spread.Sheets.IDragDropBlockCompletedEventArgs.md)
- [IDragDropBlockEventArgs](../interfaces/GC.Spread.Sheets.IDragDropBlockEventArgs.md)
- [IDragFillBlockCompletedEventArgs](../interfaces/GC.Spread.Sheets.IDragFillBlockCompletedEventArgs.md)
- [IDragFillBlockEventArgs](../interfaces/GC.Spread.Sheets.IDragFillBlockEventArgs.md)
- [IDropdown](../interfaces/GC.Spread.Sheets.IDropdown.md)
- [IEditChangeEventArgs](../interfaces/GC.Spread.Sheets.IEditChangeEventArgs.md)
- [IEditEndedEventArgs](../interfaces/GC.Spread.Sheets.IEditEndedEventArgs.md)
- [IEditEndingEventArgs](../interfaces/GC.Spread.Sheets.IEditEndingEventArgs.md)
- [IEditStartingEventArgs](../interfaces/GC.Spread.Sheets.IEditStartingEventArgs.md)
- [IEditorStatusChangedEventArgs](../interfaces/GC.Spread.Sheets.IEditorStatusChangedEventArgs.md)
- [IEnterCellEventArgs](../interfaces/GC.Spread.Sheets.IEnterCellEventArgs.md)
- [IExternalReference](../interfaces/GC.Spread.Sheets.IExternalReference.md)
- [IExternalReferenceDetail](../interfaces/GC.Spread.Sheets.IExternalReferenceDetail.md)
- [IFilterButtonHitInfo](../interfaces/GC.Spread.Sheets.IFilterButtonHitInfo.md)
- [IFloatingObjectChangedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectChangedEventArgs.md)
- [IFloatingObjectRemovedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectRemovedEventArgs.md)
- [IFloatingObjectRemovingEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectRemovingEventArgs.md)
- [IFloatingObjectSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IFloatingObjectSelectionChangedEventArgs.md)
- [IFontColorSortInfo](../interfaces/GC.Spread.Sheets.IFontColorSortInfo.md)
- [IFormulaInfo](../interfaces/GC.Spread.Sheets.IFormulaInfo.md)
- [IFormulaRangeHitInfo](../interfaces/GC.Spread.Sheets.IFormulaRangeHitInfo.md)
- [IGradientFill](../interfaces/GC.Spread.Sheets.IGradientFill.md)
- [IGradientPathFill](../interfaces/GC.Spread.Sheets.IGradientPathFill.md)
- [IHitTestCellTypeHitInfo](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md)
- [IHitTestCommentHitInfo](../interfaces/GC.Spread.Sheets.IHitTestCommentHitInfo.md)
- [IHitTestDragInfo](../interfaces/GC.Spread.Sheets.IHitTestDragInfo.md)
- [IHitTestFloatingObjectHitInfo](../interfaces/GC.Spread.Sheets.IHitTestFloatingObjectHitInfo.md)
- [IHitTestFooterCornerInfo](../interfaces/GC.Spread.Sheets.IHitTestFooterCornerInfo.md)
- [IHitTestInformation](../interfaces/GC.Spread.Sheets.IHitTestInformation.md)
- [IHitTestOutlineHitInfo](../interfaces/GC.Spread.Sheets.IHitTestOutlineHitInfo.md)
- [IHitTestResizeInfo](../interfaces/GC.Spread.Sheets.IHitTestResizeInfo.md)
- [IHitTestScrollBarInfo](../interfaces/GC.Spread.Sheets.IHitTestScrollBarInfo.md)
- [IHyperlink](../interfaces/GC.Spread.Sheets.IHyperlink.md)
- [IIHitTestTabStripInfo](../interfaces/GC.Spread.Sheets.IIHitTestTabStripInfo.md)
- [IIcon](../interfaces/GC.Spread.Sheets.IIcon.md)
- [IInvalidOperationEventArgs](../interfaces/GC.Spread.Sheets.IInvalidOperationEventArgs.md)
- [ILabelOptions](../interfaces/GC.Spread.Sheets.ILabelOptions.md)
- [ILeaveCellEventArgs](../interfaces/GC.Spread.Sheets.ILeaveCellEventArgs.md)
- [ILeftColumnChangedEventArgs](../interfaces/GC.Spread.Sheets.ILeftColumnChangedEventArgs.md)
- [IListItem](../interfaces/GC.Spread.Sheets.IListItem.md)
- [IListLayout](../interfaces/GC.Spread.Sheets.IListLayout.md)
- [IListOption](../interfaces/GC.Spread.Sheets.IListOption.md)
- [IMaskType](../interfaces/GC.Spread.Sheets.IMaskType.md)
- [IMonthPickerOption](../interfaces/GC.Spread.Sheets.IMonthPickerOption.md)
- [IMultiColumnOption](../interfaces/GC.Spread.Sheets.IMultiColumnOption.md)
- [IOutlineColumnCheckStatusChanged](../interfaces/GC.Spread.Sheets.IOutlineColumnCheckStatusChanged.md)
- [IOutlineHitInfo](../interfaces/GC.Spread.Sheets.IOutlineHitInfo.md)
- [IParamRange](../interfaces/GC.Spread.Sheets.IParamRange.md)
- [IPasteData](../interfaces/GC.Spread.Sheets.IPasteData.md)
- [IPatternFill](../interfaces/GC.Spread.Sheets.IPatternFill.md)
- [IPictureChangedEventArgs](../interfaces/GC.Spread.Sheets.IPictureChangedEventArgs.md)
- [IPictureSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IPictureSelectionChangedEventArgs.md)
- [IPivotTableChangedEventArgs](../interfaces/GC.Spread.Sheets.IPivotTableChangedEventArgs.md)
- [IProtectionOptions](../interfaces/GC.Spread.Sheets.IProtectionOptions.md)
- [IRangeChangedEventArgs](../interfaces/GC.Spread.Sheets.IRangeChangedEventArgs.md)
- [IRangeFilterClearedEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilterClearedEventArgs.md)
- [IRangeFilterClearingEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilterClearingEventArgs.md)
- [IRangeFilteredEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilteredEventArgs.md)
- [IRangeFilteringEventArgs](../interfaces/GC.Spread.Sheets.IRangeFilteringEventArgs.md)
- [IRangeGroupStateChangedEventArgs](../interfaces/GC.Spread.Sheets.IRangeGroupStateChangedEventArgs.md)
- [IRangeGroupStateChangingEventArgs](../interfaces/GC.Spread.Sheets.IRangeGroupStateChangingEventArgs.md)
- [IRangeSortedEventArgs](../interfaces/GC.Spread.Sheets.IRangeSortedEventArgs.md)
- [IRangeSortingEventArgs](../interfaces/GC.Spread.Sheets.IRangeSortingEventArgs.md)
- [IRowChangedEventArgs](../interfaces/GC.Spread.Sheets.IRowChangedEventArgs.md)
- [IRowHeightChangedEventArgs](../interfaces/GC.Spread.Sheets.IRowHeightChangedEventArgs.md)
- [IRowHeightChangingEventArgs](../interfaces/GC.Spread.Sheets.IRowHeightChangingEventArgs.md)
- [ISelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.ISelectionChangedEventArgs.md)
- [ISelectionChangingEventArgs](../interfaces/GC.Spread.Sheets.ISelectionChangingEventArgs.md)
- [ISetBorderOptions](../interfaces/GC.Spread.Sheets.ISetBorderOptions.md)
- [IShapeChangedEventArgs](../interfaces/GC.Spread.Sheets.IShapeChangedEventArgs.md)
- [IShapeRemovedEventArgs](../interfaces/GC.Spread.Sheets.IShapeRemovedEventArgs.md)
- [IShapeRemovingEventArgs](../interfaces/GC.Spread.Sheets.IShapeRemovingEventArgs.md)
- [IShapeSelectionChangedEventArgs](../interfaces/GC.Spread.Sheets.IShapeSelectionChangedEventArgs.md)
- [ISheetChangedEventArgs](../interfaces/GC.Spread.Sheets.ISheetChangedEventArgs.md)
- [ISheetChangingEventArgs](../interfaces/GC.Spread.Sheets.ISheetChangingEventArgs.md)
- [ISheetDefaultOption](../interfaces/GC.Spread.Sheets.ISheetDefaultOption.md)
- [ISheetNameChangedEventArgs](../interfaces/GC.Spread.Sheets.ISheetNameChangedEventArgs.md)
- [ISheetNameChangingEventArgs](../interfaces/GC.Spread.Sheets.ISheetNameChangingEventArgs.md)
- [ISheetTabClickEventArgs](../interfaces/GC.Spread.Sheets.ISheetTabClickEventArgs.md)
- [ISheetTabDoubleClickEventArgs](../interfaces/GC.Spread.Sheets.ISheetTabDoubleClickEventArgs.md)
- [ISlicerChangedEventArgs](../interfaces/GC.Spread.Sheets.ISlicerChangedEventArgs.md)
- [ISliderOption](../interfaces/GC.Spread.Sheets.ISliderOption.md)
- [ISortOptions](../interfaces/GC.Spread.Sheets.ISortOptions.md)
- [ISparklineChangedEventArgs](../interfaces/GC.Spread.Sheets.ISparklineChangedEventArgs.md)
- [ITableFilterClearedEventArgs](../interfaces/GC.Spread.Sheets.ITableFilterClearedEventArgs.md)
- [ITableFilterClearingEventArgs](../interfaces/GC.Spread.Sheets.ITableFilterClearingEventArgs.md)
- [ITableFilteredEventArgs](../interfaces/GC.Spread.Sheets.ITableFilteredEventArgs.md)
- [ITableFilteringEventArgs](../interfaces/GC.Spread.Sheets.ITableFilteringEventArgs.md)
- [ITimePickerOption](../interfaces/GC.Spread.Sheets.ITimePickerOption.md)
- [ITimePickerValue](../interfaces/GC.Spread.Sheets.ITimePickerValue.md)
- [ITopRowChangedEventArgs](../interfaces/GC.Spread.Sheets.ITopRowChangedEventArgs.md)
- [ITouchToolStripOpeningEventArgs](../interfaces/GC.Spread.Sheets.ITouchToolStripOpeningEventArgs.md)
- [IUserFormulaEnteredEventArgs](../interfaces/GC.Spread.Sheets.IUserFormulaEnteredEventArgs.md)
- [IUserZoomingEventArgs](../interfaces/GC.Spread.Sheets.IUserZoomingEventArgs.md)
- [IValidationErrorEventArgs](../interfaces/GC.Spread.Sheets.IValidationErrorEventArgs.md)
- [IValueChangedEventArgs](../interfaces/GC.Spread.Sheets.IValueChangedEventArgs.md)
- [IValueSortInfo](../interfaces/GC.Spread.Sheets.IValueSortInfo.md)
- [IWorkBookDefaultOptions](../interfaces/GC.Spread.Sheets.IWorkBookDefaultOptions.md)
- [IWorkFlowItem](../interfaces/GC.Spread.Sheets.IWorkFlowItem.md)
- [IWorkFlowOption](../interfaces/GC.Spread.Sheets.IWorkFlowOption.md)
- [IWorkSheetGridlineOption](../interfaces/GC.Spread.Sheets.IWorkSheetGridlineOption.md)
- [IWorkSheetSheetAreaOffsetOption](../interfaces/GC.Spread.Sheets.IWorkSheetSheetAreaOffsetOption.md)
- [IWorkbookHitTestInformation](../interfaces/GC.Spread.Sheets.IWorkbookHitTestInformation.md)
- [IWorkbookOptions](../interfaces/GC.Spread.Sheets.IWorkbookOptions.md)
- [IWorksheetOptions](../interfaces/GC.Spread.Sheets.IWorksheetOptions.md)
- [SheetTabInfo](../interfaces/GC.Spread.Sheets.SheetTabInfo.md)

### Type aliases

- [CellValue](GC.Spread.Sheets.md#cellvalue)
- [ExportCsvOptions](GC.Spread.Sheets.md#exportcsvoptions)
- [ExportOptions](GC.Spread.Sheets.md#exportoptions)
- [ExportSSJsonOptions](GC.Spread.Sheets.md#exportssjsonoptions)
- [ExportXlsxOptions](GC.Spread.Sheets.md#exportxlsxoptions)
- [ExternalPartialValues](GC.Spread.Sheets.md#externalpartialvalues)
- [FileOptions](GC.Spread.Sheets.md#fileoptions)
- [ImportCsvOptions](GC.Spread.Sheets.md#importcsvoptions)
- [ImportOptions](GC.Spread.Sheets.md#importoptions)
- [ImportSSJsonOptions](GC.Spread.Sheets.md#importssjsonoptions)
- [ImportXlsxOptions](GC.Spread.Sheets.md#importxlsxoptions)
- [OpenOptions](GC.Spread.Sheets.md#openoptions)
- [PartialValues](GC.Spread.Sheets.md#partialvalues)
- [ProgressArgs](GC.Spread.Sheets.md#progressargs)
- [ProgressFunctionType](GC.Spread.Sheets.md#progressfunctiontype)
- [SaveOptions](GC.Spread.Sheets.md#saveoptions)

### Variables

- [LicenseKey](GC.Spread.Sheets.md#licensekey)

### Functions

- [findControl](GC.Spread.Sheets.md#findcontrol)
- [getTypeFromString](GC.Spread.Sheets.md#gettypefromstring)

## Type aliases

### <a id="cellvalue" name="cellvalue"></a> CellValue

Ƭ **CellValue**: `Object`

- **`property`** {any} col - 键值集合,其键为列编号，值为任何类型的单元格值

#### Index signature

▪ [col: `number`]: `any`

___

### <a id="exportcsvoptions" name="exportcsvoptions"></a> ExportCsvOptions

Ƭ **ExportCsvOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {string} [encoding] - csv编码类型，默认编码类型为'UTF-8'。
- **`property`** {string} [rowDelimiter] - 附加到行尾的行分隔符，默认行分隔符为'\r\n'
- **`property`** {string} [columnDelimiter] - 附加到列末尾的列分隔符,默认列分隔符为','
- **`property`** {object} [range] - 区域信息
- **`param`** 页面索引，默认页面索引为当前活动页面索引
- **`param`** 起始行，缺省行索引为 0
- **`param`** 起始列，缺省列索引为 0
- **`param`** 行计数，缺省行计数为当前活动页面行数。
- **`param`** 列计数，缺省列计数为当前活动页面列计数。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnDelimiter?` | `string` |
| `encoding?` | `string` |
| `range?` | { `column`: `number` ; `columnCount`: `number` ; `row`: `number` ; `rowCount`: `number` ; `sheetIndex`: `number`  } |
| `range.column` | `number` |
| `range.columnCount` | `number` |
| `range.row` | `number` |
| `range.rowCount` | `number` |
| `range.sheetIndex` | `number` |
| `rowDelimiter?` | `string` |

___

### <a id="exportoptions" name="exportoptions"></a> ExportOptions

Ƭ **ExportOptions**: [`FileOptions`](GC.Spread.Sheets.md#fileoptions) & [`ExportCsvOptions`](GC.Spread.Sheets.md#exportcsvoptions) \| [`ExportSSJsonOptions`](GC.Spread.Sheets.md#exportssjsonoptions) \| [`ExportXlsxOptions`](GC.Spread.Sheets.md#exportxlsxoptions)

___

### <a id="exportssjsonoptions" name="exportssjsonoptions"></a> ExportSSJsonOptions

Ƭ **ExportSSJsonOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {boolean} [includeBindingSource] - 将工作簿转换为json时是否包括绑定源，默认为 false。
- **`property`** {boolean} [includeStyles] - 在将工作簿转换为json时是否包括样式,默认值为true
- **`property`** {boolean} [includeFormulas] - 在将工作簿转换为json时是否包括公式,默认值为true。
- **`property`** {boolean} [saveAsView] - 将工作簿转换为json时是否应用格式字符串,默认为false。
- **`property`** {boolean} [rowHeadersAsFrozenColumns] - 将工作簿转换为json时,是否将行标题视为冻结列,默认为false。
- **`property`** {boolean} [columnHeadersAsFrozenRows] - 将工作簿转换为json时,是否将列标题视为冻结行,默认为false。
- **`property`** {boolean} [includeAutoMergedCells] - 在将工作簿转换为json时是否包括自动合并的单元格,默认值为false。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnHeadersAsFrozenRows?` | `boolean` |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `rowHeadersAsFrozenColumns?` | `boolean` |
| `saveAsView?` | `boolean` |

___

### <a id="exportxlsxoptions" name="exportxlsxoptions"></a> ExportXlsxOptions

Ƭ **ExportXlsxOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {boolean} [includeBindingSource] - 保存时是否包括绑定源,默认为false。
- **`property`** {boolean} [includeStyles] - 保存时是否包括样式,默认为true。
- **`property`** {boolean} [includeFormulas] - 保存时是否包括公式,默认为true
- **`property`** {boolean} [saveAsView] - 保存时是否应用格式字符串,默认为false。
- **`property`** {boolean} [rowHeadersAsFrozenColumns] - 保存时是否将行标题视为冻结列,默认为false。
- **`property`** {boolean} [columnHeadersAsFrozenRows] - 保存时是否将列标题视为冻结行,默认为false。
- **`property`** {boolean} [includeAutoMergedCells] - 保存时是否包括自动合并的单元格,默认为false。
- **`property`** {boolean} [includeCalcModelCache] - 是否包括额外的计算数据。使用这些数据打开文件时可能会更快,默认为false。
- **`property`** {boolean} [includeUnusedNames] - 保存时是否包含未使用的自定义名称,默认为true。
- **`property`** {boolean} [includeEmptyRegionCells] - 是否在使用的数据范围之外包括任何空单元格（无数据的单元格或仅样式的单元格）,默认为true。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnHeadersAsFrozenRows?` | `boolean` |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeCalcModelCache?` | `boolean` |
| `includeEmptyRegionCells?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedNames?` | `boolean` |
| `password?` | `string` |
| `rowHeadersAsFrozenColumns?` | `boolean` |
| `saveAsView?` | `boolean` |

___

### <a id="externalpartialvalues" name="externalpartialvalues"></a> ExternalPartialValues

Ƭ **ExternalPartialValues**: `Object`

**`property`** {GC.Spread.Sheets.PartialValues} filePath - 键值集合,该键是文件路径字符串,值是 GC.Spread.Sheets.PartialValues 的类型。

#### Index signature

▪ [filePath: `string`]: [`PartialValues`](GC.Spread.Sheets.md#partialvalues)

___

### <a id="fileoptions" name="fileoptions"></a> FileOptions

Ƭ **FileOptions**: `Object`

**`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `fileType` | [`FileType`](../enums/GC.Spread.Sheets.FileType.md) | 文件类型 |

___

### <a id="importcsvoptions" name="importcsvoptions"></a> ImportCsvOptions

Ƭ **ImportCsvOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {string} [encoding] - csv编码类型,默认编码类型为'UTF-8'。
- **`property`** {string} [rowDelimiter] - 附加到行尾的行分隔符,默认行分隔符为'\r\n'。
- **`property`** {string} [columnDelimiter] - 附加到列末尾的列分隔符,默认列分隔符为','。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `columnDelimiter?` | `string` |
| `encoding?` | `string` |
| `rowDelimiter?` | `string` |

___

### <a id="importoptions" name="importoptions"></a> ImportOptions

Ƭ **ImportOptions**: [`FileOptions`](GC.Spread.Sheets.md#fileoptions) & [`ImportCsvOptions`](GC.Spread.Sheets.md#importcsvoptions) \| [`ImportSSJsonOptions`](GC.Spread.Sheets.md#importssjsonoptions) \| [`ImportXlsxOptions`](GC.Spread.Sheets.md#importxlsxoptions)

___

### <a id="importssjsonoptions" name="importssjsonoptions"></a> ImportSSJsonOptions

Ƭ **ImportSSJsonOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {boolean} [includeStyles] - 在将json转换为工作簿时是否包括样式,默认值为true。
- **`property`** {boolean} [includeFormulas] - 在将json转换为工作簿时是否包括公式,默认值为true。
- **`property`** {boolean} [frozenColumnsAsRowHeaders] - 将json转换为工作簿时,是否将冻结列视为行标题,默认为false。
- **`property`** {boolean} [frozenRowsAsColumnHeaders] - 在将json转换为工作簿时,是否将冻结行视为列标题,默认为false。
- **`property`** {boolean} [fullRecalc] - 加载json数据后是否执行完全重新计算,默认为true。
- **`property`** {boolean | object} [incrementalLoad] - 在将json转换为工作簿时使用增量加载还是增量加载的回调,默认为false。
- **`param`** 当加载过程递增时的回调
- **`param`** 增量加载完成时的回调

#### Type declaration

| Name | Type |
| :------ | :------ |
| `frozenColumnsAsRowHeaders?` | `boolean` |
| `frozenRowsAsColumnHeaders?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `incrementalLoad?` | `any` |

___

### <a id="importxlsxoptions" name="importxlsxoptions"></a> ImportXlsxOptions

Ƭ **ImportXlsxOptions**: `Object`

- **`property`** {GC.Spread.Sheets.FileType} fileType - 文件类型
- **`property`** {boolean} [includeStyles] - 载入时是否包括样式,预设为true。
- **`property`** {boolean} [includeFormulas] - 加载时是否包括公式,默认为true。
- **`property`** {boolean} [frozenColumnsAsRowHeaders] - 加载时是否将冻结列视为行标题,默认为false。
- **`property`** {boolean} [frozenRowsAsColumnHeaders] - 加载时是否将冻结行视为列标题,默认为false。
- **`property`** {boolean} [fullRecalc] - 加载json数据后是否计算,默认情况下为false。
- **`property`** {boolean} [dynamicReferences] - 是否使用动态参考计算函数,默认为true。
- **`property`** {boolean} [calcOnDemand] - 是否仅在需要时才计算公式,默认为false。
- **`property`** {boolean} [includeUnusedStyles] - 在将excel xml转换为json时是否包括未使用的名称样式,默认为true。
- **`property`** {GC.Spread.Sheets.OpenMode} [openMode] - 正常、懒加载和增量的打开模式。默认情况下是正常的。
- **`property`** {string} [password] - 密码
- **`property`** {GC.Spread.Sheets.ProgressFunctionType} [progress] - 打开时的回调函数

#### Type declaration

| Name | Type |
| :------ | :------ |
| `calcOnDemand?` | `boolean` |
| `dynamicReferences?` | `boolean` |
| `frozenColumnsAsRowHeaders?` | `boolean` |
| `frozenRowsAsColumnHeaders?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedStyles?` | `boolean` |
| `openMode?` | [`OpenMode`](../enums/GC.Spread.Sheets.OpenMode.md) |
| `password?` | `string` |
| `progress?` | [`ProgressFunctionType`](GC.Spread.Sheets.md#progressfunctiontype) |

___

### <a id="openoptions" name="openoptions"></a> OpenOptions

Ƭ **OpenOptions**: `Object`

- **`property`** {boolean} [includeStyles] - 载入时是否包括样式,预设为true。
- **`property`** {boolean} [includeFormulas] - 加载时是否包括公式,默认为true。
- **`property`** {boolean} [fullRecalc] - 加载json数据后是否计算,默认情况下为false。
- **`property`** {boolean} [dynamicReferences] - 是否使用动态参考计算函数,默认为true。
- **`property`** {boolean} [calcOnDemand] - 是否仅在需要时才计算公式,默认为false。
- **`property`** {boolean} [includeUnusedStyles] - 在将excel xml转换为json时是否包括未使用的名称样式,默认为true。
- **`property`** {GC.Spread.Sheets.OpenMode} [openMode] - 正常、懒加载和增量的打开模式。默认情况下是正常的。
- **`property`** {GC.Spread.Sheets.ProgressFunctionType} [progress] - 打开时的回调函数

#### Type declaration

| Name | Type |
| :------ | :------ |
| `calcOnDemand?` | `boolean` |
| `dynamicReferences?` | `boolean` |
| `fullRecalc?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedStyles?` | `boolean` |
| `openMode?` | [`OpenMode`](../enums/GC.Spread.Sheets.OpenMode.md) |
| `progress?` | [`ProgressFunctionType`](GC.Spread.Sheets.md#progressfunctiontype) |

___

### <a id="partialvalues" name="partialvalues"></a> PartialValues

Ƭ **PartialValues**: `Object`

- **`property`** {GC.Spread.Sheets.CellValue} row - 键值集合,它是行号,值是GC.Spread.Sheets.CellValue的类型。

#### Index signature

▪ [row: `number`]: [`CellValue`](GC.Spread.Sheets.md#cellvalue)

___

### <a id="progressargs" name="progressargs"></a> ProgressArgs

Ƭ **ProgressArgs**: `Object`

- **`property`** {string} sheetName - 当前加载表的名称。
- **`property`** {string} step - 当前加载步骤。
- **`property`** {number} progress - 当前加载进度,从0 ~ 1。

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| `progress` | `number` | 当前加载进度,从0 ~ 1 |
| `sheetName?` | `string` | 当前加载表的名称 |
| `step` | `string` | 当前加载步骤 |

___

### <a id="progressfunctiontype" name="progressfunctiontype"></a> ProgressFunctionType

Ƭ **ProgressFunctionType**: (`progressArgs`: [`ProgressArgs`](GC.Spread.Sheets.md#progressargs)) => `void`

#### Type declaration

▸ (`progressArgs`): `void`

**`description`** 当加载过程递增时的回调

##### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `progressArgs` | [`ProgressArgs`](GC.Spread.Sheets.md#progressargs) | the progress arguments. |

##### Returns

`void`

___

### <a id="saveoptions" name="saveoptions"></a> SaveOptions

Ƭ **SaveOptions**: `Object`

- **`property`** {boolean} [includeBindingSource] - 保存时是否包括绑定源,默认为false。
- **`property`** {boolean} [includeStyles] - 保存时是否包括样式,默认为true。
- **`property`** {boolean} [includeFormulas] - 保存时是否包括公式,默认为true。
- **`property`** {boolean} [saveAsView] - 保存时是否应用格式字符串,默认为false。
- **`property`** {boolean} [includeAutoMergedCells] - 保存时是否包括自动合并的单元格,默认为false。
- **`property`** {boolean} [includeCalcModelCache] - 是否包括额外的计算数据。使用这些数据打开文件时可能会更快,默认为false。
- **`property`** {boolean} [includeUnusedNames] - 保存时是否包含未使用的自定义名称,默认为true。
- **`property`** {boolean} [includeEmptyRegionCells] - 是否在使用的数据范围之外包括任何空单元格（无数据的单元格或仅样式的单元格）,默认为true。

#### Type declaration

| Name | Type |
| :------ | :------ |
| `includeAutoMergedCells?` | `boolean` |
| `includeBindingSource?` | `boolean` |
| `includeCalcModelCache?` | `boolean` |
| `includeEmptyRegionCells?` | `boolean` |
| `includeFormulas?` | `boolean` |
| `includeStyles?` | `boolean` |
| `includeUnusedNames?` | `boolean` |
| `saveAsView?` | `boolean` |

## Variables

### <a id="licensekey" name="licensekey"></a> LicenseKey

• **LicenseKey**: `string`

设计器授权

## Functions

### <a id="findcontrol" name="findcontrol"></a> findControl

▸ **findControl**(`host`): [`Workbook`](../classes/GC.Spread.Sheets.Workbook.md)

通过宿主元素获取工作簿实例

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `host` | `string` \| `HTMLElement` | 宿主元素或宿主元素id |

#### Returns

[`Workbook`](../classes/GC.Spread.Sheets.Workbook.md)

工作簿实例

___

### <a id="gettypefromstring" name="gettypefromstring"></a> getTypeFromString

▸ **getTypeFromString**(`typeString`): `any`

从类型字符串中获取类型此方法支持自定义对象的序列化

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `typeString` | `string` | 字符串类型 |

#### Returns

`any`

类型
